bag fix cursor poinet for main swiper / footer gap

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -269,6 +269,7 @@ body {}
         line-height: normal;
         letter-spacing: 0.8px;
         text-transform: uppercase;
+        cursor: pointer;
     }
     .main-swiper_yellow{
         position: relative;
@@ -2026,8 +2027,14 @@ body {}
     }
 }
 
-@media (max-width: 576px) {
+@media (max-width: 630px) {
     .footer-mobile-br{
         display: block;
     }
+}
+
+@media (max-width: 500px) {
+   .footer-content{
+    gap:15px;
+   } 
 }
